# openblack

./: CMakeLists.txt  vcpkg.json
.github/workflows/: ci-cross-compile.yml  ci-vcpkg.yml  format-check.yml
apps/l3dtool/: l3dtool.cpp
assets/shaders/: fs_object.sc
components/Audio/: CMakeLists.txt
components/Audio/include/: AudioDecoder.h  AudioEmitter.h  AudioPlayer.h  FfmpegDecoder.h  Sound.h
components/Audio/src/: AudioDecoder.cpp  FfmpegDecoder.cpp  MathUtils.cpp  OpenAlPlayer.cpp  SoundPack.cpp
components/Common/: CMakeLists.txt
components/Common/include/: Bitmap16B.h  EventManager.h
components/Common/src/: Bitmap16B.cpp  FileSystem.cpp
components/l3d/include/: L3DFile.h
components/l3d/src/: L3DFile.cpp
components/lnd/include/: LNDFile.h
components/lnd/src/: LNDFile.cpp
components/pack/src/: PackFile.cpp
components/sad/src/: SADFile.cpp
src/: CMakeLists.txt  Game.cpp  Game.h  GameWindow.cpp  Gui.cpp  Level.h  LevelLocator.cpp  LevelLocator.h  Locator.h  Renderer.cpp
src/3D/: AnimationPack.cpp  L3DAnim.cpp  L3DMesh.cpp  L3DMesh.h  L3DSubMesh.h  LandIsland.cpp  MeshPack.cpp  MeshPack.h  Sky.cpp  Water.cpp
src/Camera/: Camera.cpp  DefaultWorldCameraModel.cpp
src/Common/: FileSystem.cpp  FileSystem.h  RNG.h  RNGManager.h  StringUtils.h
src/Debug/: MeshViewer.cpp
src/Dynamics/: LandBlockBulletMeshInterface.h
src/ECS/Archetypes/: CameraBookmarkArchetype.cpp
src/ECS/Systems/Implementations/: VillagerStateTable.MD
src/Entities/Components/: Hand.h
src/FileSystem/: AndroidFileSystem.cpp  AndroidFileSystem.h  DefaultFileSystem.cpp  DefaultFileSystem.h  FileSystemInterface.h
src/Graphics/: Renderer.cpp  ShaderProgram.cpp  Texture2D.cpp
src/Gui/: Gui.cpp
src/Parsers/: InfoFile.cpp
src/Resources/: Loaders.cpp
src/Serializer/: FotFile.cpp  GameThingSerializer.cpp
src/Sound/: AudioDebug.h  SoundHandler.cpp
test/: CMakeLists.txt  test_game_initialize.cpp
test/mock/: CMakeLists.txt
test/rng_manager/: test_rng_manager.cpp
